# PicoCalc-GameBoy

./: .gitignore  .gitmodules  CMakeLists.txt  memmap_2350.ld  memmap_default.ld
ext/FatFs_SPI/: CMakeLists.txt
ext/FatFs_SPI/ff15/source/: ff.c
ext/ili9488_p/: CMakeLists.txt  i2ckbd.c  i2ckbd.h  mono8x16.c  mono8x16.h  mono8x16_bmp.c  picocalc.c  picocalc.h  picocalc.pio  picocalc_c.h
prebuild/: PocketPico.uf2  PocketPicoPicoCalcRP2040.uf2  PocketPicoPicoCalcRP2350.uf2
src/: audio.c  audio.h  buffer.c  buffer.h  config.h  flash.c  gb.c  gb.h  main.c  pwm_audio.h  ram_cart.c  rom.c  sdcard.c  sdcard.h  shared.h  state.c
